add new func findProduct, add new Dto formatProduct, call api page Home

--- a/FE/src/page/product/product.css
+++ b/FE/src/page/product/product.css
@@ -1,5 +1,9 @@
 .select-option {
     background-color: white !important;
     border-bottom: 1px solid #eae8e4 !important;
-    
+
+}
+
+.name-height {
+    height: 3rem !important;
 }
